<resources>
    <string name="app_name">TODOlist</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_to_list">Add to list:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_edit_item">EditItem</string>
    <string name="edit1">EDIT</string>
    <string name="cancel">CANCEL</string>
    <string name="list_details">List details</string>
    <string name="list_name">List name</string>
    <string name="edit2">EDIT</string>
    <string name="cancel1">CANCEL</string>
    <string name="mark_as_done">Mark as done:</string>
    <string name="list_name1">List name</string>
    <string name="list_details1">List details</string>
    <string name="cancelAdd">CANCEL</string>
    <string name="add">ADD</string>
    <string name="done">Done</string>
    <string name="all">All</string>
    <string name="personal">Personal</string>
    <string name="shopping">Shopping</string>
    <string name="wishlist">Wishlist</string>
    <string name="work">Work</string>
    <string name="finished">Finished</string>
</resources>
