<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all"
            android:icon="@drawable/ic_toc_white_48dp"
            android:title="@string/all" />
        <item
            android:id="@+id/personal"
            android:icon="@drawable/ic_toc_white_48dp"
            android:title="@string/personal" />
        <item
            android:id="@+id/shopping"
            android:icon="@drawable/ic_toc_white_48dp"
            android:title="@string/shopping" />
        <item
            android:id="@+id/wishlist"
            android:icon="@drawable/ic_toc_white_48dp"
            android:title="@string/wishlist" />
        <item
            android:id="@+id/work"
            android:icon="@drawable/ic_toc_white_48dp"
            android:title="@string/work" />

        <item
            android:id="@+id/finished"
            android:icon="@drawable/ic_done_all_white_48dp"
            android:title="@string/finished" />
    </group>

</menu>
