<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_make_todo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mmilica.todolist.AddItem"
    android:orientation="vertical"
    android:weightSum="10">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_name1"/>
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/list_details1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancelButton"
            android:text="@string/cancelAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/addButton"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_to_list"
            android:textSize="18sp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>